# DEV

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json
DEV/: CMakeLists.txt
DEV/inc/: App.h
DEV/inc/dev/: App.hpp  DevMenuBar.hpp  Editor.hpp  Forms.hpp  GuiPanel.hpp  Json.hpp  MainMenu.hpp  Query.hpp
DEV/inc/internal/: EventRecorder.hpp
DEV/src/: App.cpp  DevMenuBar.cpp  Editor.cpp  GuiPanel.cpp  Json.cpp  MainMenu.cpp  Query.cpp  main.cpp
DEV/src/internal/: EventRecorder.cpp
cmake/: Config.cmake
config/forms/: JsonForm.txt
